# fullcycle_micro_videos

./: .gitignore  .p10k.zsh  .pylintrc  Dockerfile  README  README.md  api.http  docker-compose.yaml  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
envs/: .env.e2e.example  .env.example  .env.test.example
src/__seedwork/application/: dto.py  use_cases.py
src/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/__seedwork/tests/integration/domain/: test_init_validators.py
src/__seedwork/tests/unit/application/: test_unit_dto.py  test_use_cases.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validators.py  (+1 more)
src/category/application/: dto.py  use_cases.py
src/category/domain/: entities.py  repositories.py  validators.py
src/category/infa/: repositories.py
src/category/tests/application/: test_dto.py  test_unit_dto.py  test_unit_use_cases.py
src/category/tests/domain/: test_entities.py
src/core/: conftest.py  pytest_plugin.py
src/core/__seedwork/application/: dto.py
src/core/__seedwork/domain/: entities.py  entities_fake_builder.py  exceptions.py  repositories.py  utils.py  validators.py  value_objects.py
src/core/__seedwork/infra/: serializers.py
src/core/cast_member/application/: dto.py  use_cases.py
src/core/cast_member/domain/: entities.py  entities_faker_builder.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/core/cast_member/infra/: container.py
src/core/category/application/: dto.py  use_cases.py
src/core/category/domain/: entities.py  entities_faker_builder.py  repositories.py  validators.py
src/core/category/infa/: repositories.py
src/django_app/: config.py  container.py  settings.py  urls.py
src/django_app/django_app/: settings.py
src/django_app/settings/: __init__.py  __settings.py  rest_framework.py  testing.py
(+74 files in other folders)
