
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "moliveira", email = "moliveira@pinterest.com"},
]
dependencies = [
    "djangorestframework>=3.14.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.2",
    "pylint>=2.17.4",
    "pytest>=7.3.1",
]
