
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "moliveira", email = "moliveira@pinterest.com"},
]
dependencies = [
    "djangorestframework>=3.14.0",
    "pytest-cov>=4.1.0",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "autopep8>=2.0.2",
    "pylint>=2.17.4",
    "pytest>=7.3.1",
]

[tool.pdm.scripts]
pep8 = "python -m autopep8 --in-place --recursive ./src"
test = "pytest --ignore __pypackages__"
test_cov = "pdm run test --cov ./src --cov-fail-under 80"
test_cov_html = "pdm run test_cov --cov-report html:./__coverage"

